force-app/main/default/objects/OrgTempData__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This custom setting is used to store temporary information for the org</description>
    <fields>
        <fullName>DestinationOrg__c</fullName>
        <description>Selected destination org for Deployment</description>
        <label>DestinationOrg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrgRecordId__c</fullName>
        <label>OrgRecordId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceOrg__c</fullName>
        <description>Selected source org to retreive metadata</description>
        <label>SourceOrg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OrgTempData</label>
</CustomObject>